<resources>
    <string name="app_name">Movie</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">Overview</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="movie">Movies</string>
    <string name="tv_show">TV Shows</string>
    <string name="title_activity_detail_t_v">Detail TV</string>
</resources>